--- a/login.html
+++ b/login.html
@@ -7,8 +7,8 @@
 </head>
 <body>
   <form class="login" action="/" method="post">
-    <div class="username">Username: <input type="text" name="username"></div>
-    <div class="password">Password: <input type="password" name="password"></div>
+    <div class="username"><input type="text" name="username" placeholder="Username"></div>
+    <div class="password"><input type="password" name="password" placeholder="Password"></div>
     <div class="loginbutton"><input type="submit" name="login" value="Login"></div>
   </form>
 </body>
