--- a/login.html
+++ b/login.html
@@ -6,9 +6,12 @@
     <title>Log in to Inforum</title>
 </head>
 <body>
+  <h1 class="topic">Login to inforum</h1>
   <form class="login" action="/" method="post">
     <div class="username"><input type="text" name="username" placeholder="Username"></div>
     <div class="password"><input type="password" name="password" placeholder="Password"></div>
     <div class="loginbutton"><input type="submit" name="login" value="Login"></div>
   </form>
+  <p>No account? <a href="/register">Register here!</a></p>
 </body>
+</html>
