--- a/thread.html
+++ b/thread.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en-GB">
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
+    <meta name="viewport" http-equiv="Content-Security-Policy"
+          content="default-src 'self'; width=device-width, initial-scale=1.0, user-scalable=yes">
     <style type="text/css">code{white-space: pre;}</style>
     <link rel="stylesheet" href="style.css">
 </head>
