--- a/login.html
+++ b/login.html
@@ -10,7 +10,7 @@
   <form class="login" action="/" method="post">
     <div class="username"><input type="text" name="username" placeholder="Username"></div>
     <div class="password"><input type="password" name="password" placeholder="Password"></div>
-    <div class="loginbutton"><input type="submit" name="login" value="Login" action="#{Util.checkString()}">></div>
+    <div class="loginbutton"><input type="submit" name="login" value="Login"></div>
   </form>
   <p>No account? <a href="/register">Register here!</a></p>
 </body>
