--- a/login.html
+++ b/login.html
@@ -2,7 +2,7 @@
 <html lang="en-GB">
 <head>
     <meta name="viewport" http-equiv="Content-Security-Policy"
-          content="default-src 'self'; width=device-width, initial-scale=1.0, user-scalable=yes">
+          content="default-src 'self'"; width=device-width, initial-scale=1.0, user-scalable=yes">
     <link rel="stylesheet" href="style.css">
     <title>Log in to Inforum</title>
 </head>
